<resources>
    <string name="app_name">To Do List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_task_description">Task</string>
    <string name="priority_string">Priority</string>
    <string name="high_priority">High Priority</string>
    <string name="med_priority">Medium Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="add_button">ADD</string>
    <string name="update_button">Update</string>
</resources>